update: docs struct

--- a/docs/02.brand-heart.md
+++ b/docs/02.brand-heart.md
@@ -1,88 +1,94 @@
 ﻿# Brand Heart
 
-**_Identify your purpose, vision, mission, and values to build a brand with a strong foundation._**
+Identify your purpose, vision, mission, and values to build a brand with a strong foundation.
 
-# Purpose
+<hr/>
 
-### 1. Who are they?
+# Finding Purpose
 
-The file explorer is accessible using the button in left corner of the navigation bar. You can create a new file by clicking the **New file** button in the file explorer. You can also create folders by clicking the **New folder** button.
+### 1. What do you do?
 
-### 2. What do they do?
+The product or service you provide.
 
-The file explorer is accessible using the button in left corner of the navigation bar. You can create a new file by clicking the **New file** button in the file explorer. You can also create folders by clicking the **New folder** button.
+### 2. How do you do it?
 
-### 3. Why does it matter?
+The unique pproach to achieving the desired outcome. It’s what stands them apart from their competition.
 
-The file explorer is accessible using the button in left corner of the navigation bar. You can create a new file by clicking the **New file** button in the file explorer. You can also create folders by clicking the **New folder** button.
+### 3.Why do they do what they do?
+
+It’s a purpose, cause or belief. It’s the very reason their organization exists.
 
 # Vision Statement
 
-All your files and folders are presented as a tree in the file explorer. You can switch from one to another by clicking a file in the tree.
+A vision statement is a business document that states the current and future objectives of an organization. A company's vision must align with its mission, strategic planning, culture, and core values.
 
-### 1. Where do we want the organization to go?
+### 1. What problem does my organization seek to solve?
 
-You can rename the current file by clicking the file name in the navigation bar or by clicking the **Rename** button in the file explorer.
+Clearly identifying the problem or insufficiency your organization is responding to helps focus every action you take to ensure you're staying on track for success.
 
-### 2. What can the organization realistically achieve?
+### 2. Why do you believe this problem needs to be addressed?
 
-You can delete the current file by clicking the **Remove** button in the file explorer. The file will be moved into the **Trash** folder and automatically deleted after 7 days of inactivity.
+How Does it affect the individuals in an industry or the whole environment? Why should it be addressed now and who are we addressing it to.
 
-### 3. What problems does the organization intend to solve?
+### 3. What are the changes we believe the organization can make for individuals? For the industry?
 
-You can export the current file by clicking **Export to disk** in the menu. You can choose to export the file as plain Markdown, as HTML using a Handlebars template or as a PDF.
+Finding what’s achievable and rooting for it will keep the organization on track to success.
 
-### 4. What are the changes we believe the organization can make for individuals? For the industry?
+### 4. What is the dream for this organization?
 
-You can export the current file by clicking **Export to disk** in the menu. You can choose to export the file as plain Markdown, as HTML using a Handlebars template or as a PDF.
+This can be the best-case scenario, making it abstract and challenging.
 
-### 5. What phrases or keywords describe the type of organization and outcome they want?
+### 5. How would things be different if my dream came true?
 
-You can export the current file by clicking **Export to disk** in the menu. You can choose to export the file as plain Markdown, as HTML using a Handlebars template or as a PDF.
+How will the organization’s success reflect on its society and how would things be different.
 
-### 6. What future does the organization want to help create? What does the future look like?
+### 6. What can the organization realistically achieve?
 
-You can export the current file by clicking **Export to disk** in the menu. You can choose to export the file as plain Markdown, as HTML using a Handlebars template or as a PDF.
+Working on something achievable and obtainable will challenge people in the organization.
+
+### 7. What phrases or keywords describe the type of organization and outcome you seek for?
 
 # Mission Statement
 
+A mission statement is defined as an action-based statement that declares the purpose of an organization and how they serve their customers. This sometimes includes a description of the company, what it does, and its objectives. A mission statement is a short summary of your company's purpose.
+
 ### 1. How can the organization achieve its vision?
 
-You can export the current file by clicking **Export to disk** in the menu. You can choose to export the file as plain Markdown, as HTML using a Handlebars template or as a PDF.
+What is the single thing the organization is working towards and how is it going to be done.
 
 ### 2. What are they here to do? How do they create that future?
 
-You can export the current file by clicking **Export to disk** in the menu. You can choose to export the file as plain Markdown, as HTML using a Handlebars template or as a PDF.
+This statement should capture the key elements of the organization’s past and present and imagine the future and how would things be changed or evolved.
 
 # Brand Values
 
-### 1. Identify consumer’s main problem?
+### 1. Identify consumer’s biggest pain point?
 
-You can export the current file by clicking **Export to disk** in the menu. You can choose to export the file as plain Markdown, as HTML using a Handlebars template or as a PDF.
+The most powerful brand values are those that respond to an existing need in the marketplace.
 
 ### 2. Identify all the benefits your product offers?
 
-You can export the current file by clicking **Export to disk** in the menu. You can choose to export the file as plain Markdown, as HTML using a Handlebars template or as a PDF.
+These benefits might be actual or perceived by their consumers.
 
 ### 3. Describe what makes these benefits valuable?
 
-You can export the current file by clicking **Export to disk** in the menu. You can choose to export the file as plain Markdown, as HTML using a Handlebars template or as a PDF.
+How do those benefits bring meaning to their consumers while using their products or services.
 
 ### 4. Connect this value to your buyer's problem?
 
-You can export the current file by clicking **Export to disk** in the menu. You can choose to export the file as plain Markdown, as HTML using a Handlebars template or as a PDF.
+If you know their consumers appreciate their personalised approach to customer service then how does it link to consumer's needs.
 
 ### 5. Differentiate yourself as the preferred provider of this value?
 
-You can export the current file by clicking **Export to disk** in the menu. You can choose to export the file as plain Markdown, as HTML using a Handlebars template or as a PDF.
+Imagine they are the only ones providing this desired value.
 
 ### 6. The outcomes of those differentiating values?
 
-You can export the current file by clicking **Export to disk** in the menu. You can choose to export the file as plain Markdown, as HTML using a Handlebars template or as a PDF.
+TO Do.
 
 ### 7. How will the organization conduct itself in support and pursuit of its mission?
 
-You can export the current file by clicking **Export to disk** in the menu. You can choose to export the file as plain Markdown, as HTML using a Handlebars template or as a PDF.
+What is the only thing the organization is working towards.
 
 ## The Matrix
 
