--- a/docs/01.introduction.md
+++ b/docs/01.introduction.md
@@ -1,3 +1,3 @@
 ﻿# Introduction
 
-You may use this specification as a pathway and you may modify any way you like, without restriction.
+You may use this specification as a pathway and you may modify any way you like, without any restriction.
