--- a/docs/01.introduction.md
+++ b/docs/01.introduction.md
@@ -1,3 +1,9 @@
 ﻿# Introduction
 
 You may use this specification as a pathway and you may modify any way you like, without any restriction.
+
+### Structure
+
+1. [introduction](./01.introduction.md)
+2. [Brand Heart](./02.brand-heart.md)
+3. [Target Audience](./03.target-audience.md)
