--- a/docs/02.brand-heart.md
+++ b/docs/02.brand-heart.md
@@ -6,17 +6,17 @@ Identify your purpose, vision, mission, and values to build a brand with a stron
 
 # Finding Purpose
 
-### 1. What do you do?
+### 1. What does the organization do?
 
-The product or service you provide.
+It's products or services.
 
-### 2. How do you do it?
+### 2. How do the organization do it?
 
-The unique pproach to achieving the desired outcome. It’s what stands them apart from their competition.
+The unique pproach to achieving the desired outcome. It’s what stands them apart from the competition.
 
-### 3.Why do they do what they do?
+### 3.Why does the organiztion do what they do?
 
-It’s a purpose, cause or belief. It’s the very reason their organization exists.
+It’s a purpose, cause or belief. It’s the very reason the organization's existence.
 
 # Vision Statement
 
