--- a/docs/02.brand-identity.md
+++ b/docs/02.brand-identity.md
@@ -1,4 +1,10 @@
-﻿# Brand Identity
+﻿# Defining The Brand Identity
+
+It is worth noting that ‘Identity’ in context to brand can often mean the visual identity (visual language) of a brand such as the logo, colours and types etc. But in this context we use the term ‘Identity’ to describe the one thing that your organisation stands for, or does the best. The aim is for this attribute is to be unique to your organisation. All your brand strategy must reference and be based upon this one core attribute. This gives focus, ideally you want your customers to think of one thing that you do well, one thing you stand for, rather than diluting the experience your customers have by attempting to push several attributes or messages.
+
+## Extended Identity
+
+This step is designed to add detail to your core identity and to give a richer understanding and description of what the brand stands for and what it should be communicating.
 
 ### Brand as product
 
@@ -16,4 +22,10 @@ Brand as organisation is all about defining your business culture - the attribut
 
 lastly brand as symbol explores the visual: is there imagery that best sums up what you stand for and how you wish to be perceived?
 
+<hr/>
+
 ### References
+
+[David Aakers Brand Vision Model](https://howbrandsarebuilt.com/david-aakers-brand-vision-model-and-how-it-works-part-one)
+
+[Creating and managing a coherent brand strategy](https://www.liquidlight.co.uk/blog/brand-frameworks-creating-and-managing-a-coherent-brand-strategy/)
