--- a/docs/03.brand-heart.md
+++ b/docs/03.brand-heart.md
@@ -90,12 +90,6 @@ TO Do.
 
 What is the only thing the organization is working towards.
 
-## The Matrix
+<hr/>
 
-You can open a file from **Google Drive**, **Dropbox** or **GitHub** by opening the **Synchronize** sub-menu and clicking **Open from**. Once opened in the workspace, any modification in the file will be automatically synced.
-
-|                        |                                                                                                                                                |                                                                                                                 |                                                                                                                                 |
-| ---------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------- |
-| **External**           | **_Value Proposition_** - What are our key offerings, and how do we want them to appeal to customers and other stakeholders?                   | **_Relationships_** - What should be the nature of our relationships with key customers and other stakeholders? | **_Position_** - What are our intended position in the market and the hearts and minds of key customers and other stakeholders? |
-| **External/ Internal** | **_Expression_** - What is distinctive about the way we communicate and express ourselves and makes it possible to recognize us at a distance? | **_Brand Core_** - What do we promise, and what are the core values that sum up what our brand stands for?      | **_Personality_** - What combination of human characteristics or qualities forms our corporate character?                       |
-| **Internal**           | **_Mission & Vision_** - What engages us (mission)? What is our direction and inspiration (vision)?                                            | **_Culture_** - What are our attitudes, and how do we work and behave?                                          | **_Competences_** - What are we particularly good at, and what makes us better than the competition?                            |
+### References
