config: update structure with partials

--- a/docs/02.identity.md
+++ b/docs/02.identity.md
@@ -1,4 +1,4 @@
-﻿# Defining The Brand Identity
+﻿# The Identity
 
 It is worth noting that ‘Identity’ in context to brand can often mean the visual identity (visual language) of a brand such as the logo, colours and types etc. But in this context we use the term ‘Identity’ to describe the one thing that your organisation stands for, or does the best. The aim is for this attribute is to be unique to your organisation. All your brand strategy must reference and be based upon this one core attribute. This gives focus, ideally you want your customers to think of one thing that you do well, one thing you stand for, rather than diluting the experience your customers have by attempting to push several attributes or messages.
 
