update audience content

--- a/docs/01.introduction.md
+++ b/docs/01.introduction.md
@@ -17,9 +17,13 @@ By using a brand framework you can make sure that all customer communications an
 
 ## Table Of Contents
 
-1. [Brand Heart](./02.brand-heart.md)
-2. [Target Audience](./03.target-audience.md)
-3. [Up Coming]()
+1. [Identity](./02.identity.md)
+2. [Purpose](./03.purpose.md)
+3. [Vision](./04.vision.md)
+4. [Mission](./05.mission.md)
+5. [Audience](./06.audience.md)
+6. [Values](./07.values.md)
+7. [Metrix](./08.metrix.md)
 
 <hr/>
 
