update topics with examples

--- a/docs/03.purpose.md
+++ b/docs/03.purpose.md
@@ -8,7 +8,7 @@ Identify your purpose, vision, mission, and values to build a brand with a stron
 
 ### 1. What does the organization do?
 
-It's products or services.
+Products or services and the impact.
 
 ### 2. How do the organization do it?
 
@@ -18,6 +18,18 @@ The unique pproach to achieving the desired outcome. It’s what stands them apa
 
 It’s a purpose, cause or belief. It’s the very reason the organization's existence.
 
+## Examples
+
+- Dove: The personal care company aims to help women discover the value of real beauty and improve self-esteem worldwide. Their `#speakbeautiful` movement encouraged women to be kinder to themselves and embrace their natural bodies. The brand creates relatable and realistic marketing instead of the highly edited images common in the beauty industry.
+
+- Muji: The Japanese retailer of household items and apparel promotes self-restraint, humility and the natural state of the environment, along with supporting simplicity and moderation. It sustains the latter by offering functional products with a simple design and are practical to use. As for the former, Muji emphasizes reducing production, recycling and packaging waste.
+
+- Crayola: The art supply company works to help parents and teaches foster creativity within children. It enables those in children’s lives to inspire them to be “creatively alive” instead of simply using their products. Crayola had various programs dedicated to this purpose, a mission they attempt to achieve globally.
+
+- Everlane: The American clothing retailer has a threefold brand purpose. It is bent on creating environmentally friendly products, providing high-quality products and being transparent as possible. The company sources only from ethical factories — the kinds that have fair wages and hours. It uses fine materials and brands itself as being radically transparent. When it comes to the latter, Everlane gives information on how much their clothes cost to be made, which materials they used, the labor involved and even the transporting methods.
+
 <hr/>
 
 ### References
+
+[Building Brand Purpose with Market Research](https://resources.pollfish.com/market-research/building-brand-purpose-with-market-research/)
