--- a/docs/04.vision.md
+++ b/docs/04.vision.md
@@ -28,6 +28,21 @@ Working on something achievable and obtainable will challenge people in the orga
 
 ### 7. What phrases or keywords describe the type of organization and outcome you seek for?
 
+customer-centric, warmth, self-organized, inspire.
+
+## Examples
+
+- Amazon: “Our vision is to be earth’s most customer-centric company; to build a place where people can come to find and discover anything they might want to buy online.”
+
+* Ben & Jerry’s: “Making the best ice cream in the nicest possible way.”
+  Caterpillar: “Our vision is a world in which all people’s basic needs – such as shelter, clean water, sanitation, food, and reliable power – are fulfilled in an environmentally sustainable way, and a company that improves the quality of the environment and the communities where we live and work.”
+
+- Cradles to Crayons: “Provides children from birth through age 12, living in homeless or low-income situations, with the essential items they need to thrive – at home, at school, and at play.”
+
+- Google: “To provide access to the world’s information in one click.”
+
 <hr/>
 
 ### References
+
+[How to Find Your Brand Heart](https://www.columnfivemedia.com/how-to-find-brand-heart/)
