--- a/docs/05.mission.md
+++ b/docs/05.mission.md
@@ -10,6 +10,18 @@ What is the single thing the organization is working towards and how is it going
 
 This statement should capture the key elements of the organization’s past and present and imagine the future and how would things be changed or evolved.
 
+## Examples
+
+- Disney: To be one of the world's leading producers and providers of entertainment and information.
+
+- Meta: Give people the power to build community and bring the world closer together.
+
+- Southwest: To be the world's most loved, most efficient, and most profitable airline.
+
+- Dunkin': To be always the desired place for great coffee beverages and delicious complementary doughnuts & bakery products to enjoy with family and friends.
+
 <hr/>
 
 ### References
+
+[How to Find Your Brand Heart](https://www.columnfivemedia.com/how-to-find-brand-heart/)
