--- a/docs/07.values.md
+++ b/docs/07.values.md
@@ -1,5 +1,7 @@
 ﻿# Brand Values
 
+Brand values are the core set of guiding principles and beliefs that the brand stands for. Brand values determine your brand's identity, message and personality. These brand principles guide story, actions, behaviours and decision making processes
+
 ### 1. Identify consumer’s biggest pain point?
 
 The most powerful brand values are those that respond to an existing need in the marketplace.
@@ -31,3 +33,5 @@ What is the only thing the organization is working towards.
 <hr/>
 
 ### References
+
+[How to Find Your Brand Heart](https://www.columnfivemedia.com/how-to-find-brand-heart/)
