--- a/docs/01.introduction.md
+++ b/docs/01.introduction.md
@@ -2,9 +2,11 @@
 
 Throwing some ideas together with a logo is not a brand strategy. It’s certainly part of creating the brand, but it also includes what your goals are, who your customers are, what your brand stands for, what is the long-term vision for the brand. A well-executed brand strategy has the ability to influence the entire business or ultimately the industry as a whole.
 
-## A Brand In It's Essence
+## Brand Essence
 
-Much of brand communication and interaction consists of physical assets such as typography, iconography, and marketing messages are the tangible associations one has when interacting with the brand though perceptions and emotions. Often these intangible associations are referred to as the ‘Brand experience’ but we can only influence those tangible parts. The rest of the brand is expressed by a persons experience with the brand in Marty Neumeier's words `Your brand isn’t what you say it is. It’s what they say it is`.
+Much of brand communication and interaction consists of physical assets such as typography, iconography, and marketing messages are the tangible associations one has when interacting with the brand though perceptions and emotions. Often these intangible associations are referred to as the ‘Brand experience’ but we can only influence those tangible parts. The rest of the brand is expressed by a persons experience with the brand in Marty Neumeier's words
+
+> Your brand isn’t what you say it is. It’s what they say it is
 
 A simplistic way to sum this up is as follows:
 
