add/update voice & messaging & checklist & values

--- a/docs/01.introduction.md
+++ b/docs/01.introduction.md
@@ -25,7 +25,11 @@ By using a brand framework you can make sure that all customer communications an
 4. [Mission](./05.mission.md)
 5. [Audience](./06.audience.md)
 6. [Values](./07.values.md)
-7. [Metrix](./08.metrix.md)
+7. [Positioning](./08.positioning.md)
+8. [Voice](./09.voice.md)
+9. [Messaging](./10.messaging.md)
+10. [Metrix](./08.metrix.md)
+11. [Checklist](./12.checklist.md)
 
 <hr/>
 
