--- a/docs/06.audience.md
+++ b/docs/06.audience.md
@@ -6,7 +6,27 @@ You can start with broad categories like millennials or single dads. But good so
 
 You can sell to everyone, but you can’t target everyone with all of your social content. You can’t speak directly to your best potential customers if you’re trying to speak to their kids and parents and spouses and colleagues at the same time.
 
-- Age: You don’t need to get too specific here. Focus on learning which decade of life your social media target audience is in, or their generation.
+#### 1. What does this product/service solve for the target audience?
+
+Identifying the problem or insufficiency your organization is responding to help to understand the groups which appeal to.
+
+#### 2. Buying role of the target consumer?
+
+- Initiator: The person who first suggests or thinks of the idea of buying the particular product or service
+
+* Influencer: A person whose views influence other members of the buying centre in making the final decision
+
+* Decider: The person who ultimately determines any part of or the entire buying decision-whether to buy, what to buy, how to buy, or where to buy;
+
+* Buyer: The person who handles the paperwork of the actual purchase.
+
+* User: The person(s) who consumes or uses the product or service.
+
+* Gatekeeper: The person(s) who controls information or access, or both, to decision-makers and influencers.
+
+* Age: You don’t need to get too specific here. Focus on learning which decade of life your social media target audience is in, or their generation.
+
+### Market Segmentation
 
 - Location (and time zone): Where in the world does your social media audience live? This helps you understand which geographic areas to target. You’ll also learn what hours are most important for your customer service and sales reps to be online. And when you should schedule your social ads and posts to ensure best visibility.
 
