--- a/docs/07.values.md
+++ b/docs/07.values.md
@@ -30,8 +30,47 @@ TO Do.
 
 What is the only thing the organization is working towards.
 
+## Considerations
+
+- Memorable: Brand values don’t mean much if they’re not constantly represented by the things you do and say. Your customers and employees need to be able to remember your beliefs if you want them to have an impact.
+
+- Unique: This is something that should go without saying, but your brand values definition should be a unique reflection of your culture and identity. You can’t simply copy and paste something that works for another business. Look at strong companies for inspiration, but make sure your core ideals represent your company DNA.
+
+- Actionable: Your brand value proposition is something that needs to guide how your business works, just like your brand manifesto. When defining what matters to your company, choose actionable language. For instance, don’t just say you “value integrity”. Tell your customers that you work to do the right thing, and describe how you do that.
+
+- Meaningful: Empty phrases that look as though they’ve been picked at random from a dictionary won’t do anything for your business. If you want your core brand values to resonate with your customers, they need to include things you’re willing to fight for.
+- Clear and defined: Vague and value are two terms that rarely go together. When choosing the principles on which to build your brand, make sure that the things you stand for are easy to understand. For instance, Netflix has a slideshow describing what each of their values means, while Buffer explains their beliefs through bullet points.
+- Timeless: While companies and customers can change with time – your brand values should remain consistent and strong. The only reason you should change your values is if you’re seeing some serious backlash from your existing code of ethics. Otherwise, make your scruples something that can bend and grow with you over the years, and make sure you maintain consistency.
+
+## Examples
+
+### Starbucks
+
+With our partners, our coffee, and our customers at our core, we live these values:
+Creating a culture of warmth and belonging, where everyone is welcome.
+Acting with courage, challenging the status quo, and finding new ways to grow our company and each other.
+Being present, connecting with transparency, dignity, and respect.
+Delivering our very best in all we do, holding ourselves accountable for results.
+We are performance-driven, through the lens of humanity.
+
+> “At Starbucks, I’ve always said we’re not in the coffee business serving people, we’re in the people business serving coffee.”
+
+We can see that all of Starbucks’ brand values are intrinsically linked to the social codes they uphold and promote as part of not only their service but the wider company culture, as well.
+
+### Tesla
+
+Tech-disruptor, Tesla, is at the forefront of innovation, design, and pretty much whatever initiative its founder, Elon Musk, applies his mind to on any given day.
+
+> “doing the best, taking risks, respect, constant learning, and environmental consciousness”, we can see that Tesla is about driving growth and change fueled by bold, powerful ideas without harming the planet.
+
+This statement of values establishes right off the bat that Tesla and its people are unafraid of taking risks when they are taken conscientiously in the name of progress and innovation.
+
+However, Tesla is an interesting example, as it demonstrates the tension between a brand and its founder. Founder Musk has often found himself in the midst of a maelstrom due to his equally disruptive Twitter game.
+
+While a brand (and its personality extensions) should represent its core values, it’s crucial to balance these with the brand’s core values in the marketplace, which are often broader and go beyond the larger-than-life personality of the founder.
+
 <hr/>
 
 ### References
 
-[How to Find Your Brand Heart](https://www.columnfivemedia.com/how-to-find-brand-heart/)
+[How To Define Brand Values](https://fabrikbrands.com/how-to-define-brand-values/https://fabrikbrands.com/how-to-define-brand-values/)
