--- a/06.audience.md
+++ b/06.audience.md
@@ -56,7 +56,7 @@ Notice that Zipcar is not targeting all residents of a particular city. They’r
 - are comfortable will technology
 - are concerned about the environment
 
-<img src="../assets/images/audience-zipcar.png" width="420"/>
+<img src="./assets/images/audience-zipcar.png" width="420"/>
 
 These are all interests and behaviors that Zipcar can specifically target using social ads. They also help to guide the company’s overall approach to its social media marketing strategy. That’s clear in this thread about sustainable habits for World Environment Day.
 
