add page numbers --test

--- a/02.identity.md
+++ b/02.identity.md
@@ -24,6 +24,10 @@ Brand as organisation is all about defining your business culture - the attribut
 
 lastly brand as symbol explores the visual: is there imagery that best sums up what you stand for and how you wish to be perceived?
 
+[< Previous Page](./01.introduction.html)
+|
+[Next Page >](./03.purpose.html)
+
 <hr/>
 
 ### References
