--- a/03.purpose.md
+++ b/03.purpose.md
@@ -28,6 +28,10 @@ It’s a purpose, cause or belief. It’s the very reason the organization's exi
 
 - Everlane: The American clothing retailer has a threefold brand purpose. It is bent on creating environmentally friendly products, providing high-quality products and being transparent as possible. The company sources only from ethical factories — the kinds that have fair wages and hours. It uses fine materials and brands itself as being radically transparent. When it comes to the latter, Everlane gives information on how much their clothes cost to be made, which materials they used, the labor involved and even the transporting methods.
 
+[< Previous Page](./02.identity.html)
+|
+[Next Page >](./04.vision.html)
+
 <hr/>
 
 ### References
