--- a/04.vision.md
+++ b/04.vision.md
@@ -41,6 +41,10 @@ customer-centric, warmth, self-organized, inspire.
 
 - Google: “To provide access to the world’s information in one click.”
 
+[< Previous Page](./03.purpose.md)
+|
+[Next Page >](./05.mission.md)
+
 <hr/>
 
 ### References
