--- a/06.audience.md
+++ b/06.audience.md
@@ -60,6 +60,10 @@ Notice that Zipcar is not targeting all residents of a particular city. They’r
 
 These are all interests and behaviors that Zipcar can specifically target using social ads. They also help to guide the company’s overall approach to its social media marketing strategy. That’s clear in this thread about sustainable habits for World Environment Day.
 
+[< Previous Page](./03.purpose.md)
+|
+[Next Page >](./05.mission.md)
+
 <hr/>
 
 ### References
