--- a/10.messaging.md
+++ b/10.messaging.md
@@ -12,6 +12,10 @@ Brand voice is the way you talk to your customers and is defined by your brand's
 
 #### 5. Value Proposition?
 
+[< Previous Page](./03.purpose.md)
+|
+[Next Page >](./05.mission.md)
+
 <hr/>
 
 ### References
