--- a/12.checklist.md
+++ b/12.checklist.md
@@ -12,3 +12,7 @@ Design an effective and comprehensive visual identity that communicates who you 
 - Data Visualization
 - Video & Motion Graphics
 - Web design & Interactivity
+
+[< Previous Page](./03.purpose.md)
+|
+[Next Page >](./05.mission.md)
