--- a/07.values.md
+++ b/07.values.md
@@ -69,6 +69,10 @@ However, Tesla is an interesting example, as it demonstrates the tension between
 
 While a brand (and its personality extensions) should represent its core values, it’s crucial to balance these with the brand’s core values in the marketplace, which are often broader and go beyond the larger-than-life personality of the founder.
 
+[< Previous Page](./03.purpose.md)
+|
+[Next Page >](./05.mission.md)
+
 <hr/>
 
 ### References
